Fix excessive spacing between wrapped cards when there is no scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,3 +72,7 @@ body {
 .ar-heading {
   border-bottom: 1px solid var(--ar-border-color);
 }
+
+.ar-card-group {
+  align-content: flex-start;
+}
